Future version (tbd)
 * Require only MODIFY permission on base when updating table with MV (STAR-564)
Merged from 5.0:
 * Add support for CQL functions on collections, tuples and UDTs (CASSANDRA-17811)

4.1
 * Request-Based Native Transport Rate-Limiting (CASSANDRA-16663)
 * Add information whether sstables are dropped to SchemaChangeListener (CASSANDRA-17582)
 * Save sstable id as string in activity table (CASSANDRA-17585)
 * Add support for UUID based sstable generation identifiers (CASSANDRA-17048)
 * Fix a race condition where a keyspace can be oopened while it is being removed (CASSANDRA-17658)

4.0.7
 * Fix StorageService.getNativeaddress handling of IPv6 addresses (CASSANDRA-17945)
 * Mitigate direct buffer memory OOM on replacements (CASSANDRA-17895)
 * Fix repair failure on assertion if two peers have overlapping mismatching ranges (CASSANDRA-17900)
 * Better handle null state in Gossip schema migration to avoid NPE (CASSANDRA-17864)
 * HintedHandoffAddRemoveNodesTest now accounts for the fact that StorageMetrics.totalHints is not updated synchronously w/ writes (CASSANDRA-16679)
 * Avoid getting hanging repairs due to repair message timeouts (CASSANDRA-17613)
 * Prevent infinite loop in repair coordinator on FailSession (CASSANDRA-17834)
Merged from 3.11:
 * Make LongBufferPoolTest insensitive to timing (CASSANDRA-16681)
 * Suppress CVE-2022-25857 and other snakeyaml CVEs (CASSANDRA-17907)
 * Fix potential IndexOutOfBoundsException in PagingState in mixed mode clusters (CASSANDRA-17840)
Merged from 3.0:
 * Fix auto-completing "WITH" when creating a materialized view (CASSANDRA-17879)
 * Fix scrubber falling into infinite loop when the last partition is broken (CASSANDRA-17862)
 * Fix resetting schema (CASSANDRA-17819)

4.0.6
 * Fix race condition on updating cdc size and advancing to next segment (CASSANDRA-17792)
 * Add 'noboolean' rpm build for older distros like CentOS7 (CASSANDRA-17765)